--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link"
-                                href="https://drive.google.com/file/d/1S8M3QV0Y0OXp1_8i1Z1xdJDpNo7-wZC0/view?usp=drivesdk"
+                                href="https://drive.google.com/file/d/1kBuo5YSh5wn1hHXOxSQ_9ro4NyrfjyVs/view?usp=sharing"
                                 target="_blank">
                                 <i class="material-icons">cloud_download</i>Currículo
                             </a>
