--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           <li><a href="#news">Projetos</a></li>
           <li><a href="https://drive.google.com/file/d/1kBuo5YSh5wn1hHXOxSQ_9ro4NyrfjyVs/view?usp=sharing" target="_blank">
             Currículo</a></li>
-          <li><a href="https://www.linkedin.com/in/leticia-rodrigues-72b4b21a2/">Contato</a></li>
-          <li><a href="https://github.com/leticia-rodrigues2">Habilidades</a></li>
+          <li><a href="https://www.linkedin.com/in/leticia-rodrigues-72b4b21a2/"target="_blank">Contato</a></li>
+          <li><a href="https://github.com/leticia-rodrigues2"target="_blank">Habilidades</a></li>
           <li><a href="#quem-sou">Quem sou</a></li>
         </ul>
       </div>  
