--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       <div class="MENU">
         <ul class="topnav">
           <li><a class="active" href="#home">Home</a></li>
-          <li><a href="#news">Projetos</a></li>
+          <li><a href="https://github.com/leticia-rodrigues2?tab=repositories" target="_blank">Projetos</a></li>
           <li><a href="https://drive.google.com/file/d/1kBuo5YSh5wn1hHXOxSQ_9ro4NyrfjyVs/view?usp=sharing" target="_blank">
             Currículo</a></li>
-          <li><a href="https://www.linkedin.com/in/leticia-rodrigues-72b4b21a2/"target="_blank">Contato</a></li>
-          <li><a href="https://github.com/leticia-rodrigues2"target="_blank">Habilidades</a></li>
+          <li><a href="https://www.linkedin.com/in/leticia-rodrigues-72b4b21a2/" target="_blank">Contato</a></li>
+          <li><a href="https://github.com/leticia-rodrigues2" target="_blank">Habilidades</a></li>
           <li><a href="#quem-sou">Quem sou</a></li>
         </ul>
       </div>  
