--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="styles.css" rel="stylesheet">
-    <title>DESEVOLVEDORA FRONT-END Leticia Rodrigues</title>
+    <title>Leticia Rodrigues</title>
   </head>
   <body>
     
@@ -15,11 +16,9 @@
       <div class="MENU">
         <ul class="topnav">
           <li><a class="active" href="#home">Home</a></li>
-          <li><a href="https://github.com/leticia-rodrigues2?tab=repositories" target="_blank">Projetos</a></li>
-          <li><a href="https://drive.google.com/file/d/1kBuo5YSh5wn1hHXOxSQ_9ro4NyrfjyVs/view?usp=sharing" target="_blank">
-            Currículo</a></li>
-          <li><a href="https://www.linkedin.com/in/leticia-rodrigues-72b4b21a2/" target="_blank">Contato</a></li>
-          <li><a href="https://github.com/leticia-rodrigues2" target="_blank">Habilidades</a></li>
+          <li><a href="#news">Projetos</a></li>
+          <li><a href="#contact">Contato</a></li>
+          <li><a href="#contact">Habilidades</a></li>
           <li><a href="#quem-sou">Quem sou</a></li>
         </ul>
       </div>  
@@ -33,14 +32,14 @@
         </div>
       </div>
     </div>
-  
-   
+
+
     <div class="habilidades">
       <div class="container">
         <div class="row">
           <div class="col">
             <h2>SOBRE</h2>   
-            <img src=".//img/leticia.jpeg">
+            <img src="./leticia.jpeg">
                 <p><strong>Letícia Rodrigues Bento</strong><br>
                   <strong>Disponibilidade:</strong> Período Integral <br>
                   <strong>Sistemas da informação 4/8</strong> <br>
@@ -152,8 +151,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-   
-
    
   </body>
 </html>
