--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
 
 
-    <footer class="footer text-center ">
+    <footer>
       <h6> 
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
             class="bi bi-person-lines-fill" viewBox="0 0 16 16">
@@ -169,12 +169,6 @@
           leticiaarodrigues2@gmail.com
       </h6>
   </footer>
- 
- 
- 
- 
-  </footer>
-    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
    
     <script src="home.js"></script>
