--- a/Projetos/projetos.html
+++ b/Projetos/projetos.html
@@ -1,22 +1,162 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="estiloProjeto.css" rel="stylesheet">
-</head>
-<body>
+  <head>
+    <title>Projetos&#129419;</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="./reset.css" />
 
-<h2>Opacity with Box</h2>
-<p>Hover over the image to see the effect.</p>
+    <link rel="stylesheet" href="./estiloProjeto.css" />
+  </head>
+  <body>
+    <header>
+      <div class="MENU">
+        <ul class="topnav">
+          <li>
+            <a
+              href="https://drive.google.com/file/d/1kBuo5YSh5wn1hHXOxSQ_9ro4NyrfjyVs/view?usp=sharing"
+              target="_blank"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-file-text-fill"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M12 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM5 4h6a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1zm-.5 2.5A.5.5 0 0 1 5 6h6a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5zM5 8h6a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1zm0 2h3a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1z"
+                />
+              </svg>
+              Currículo</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/leticia-rodrigues-72b4b21a2/"
+              target="_blank"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-linkedin"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"
+                />
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/leticia-rodrigues2" target="_blank">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-github"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
+                />
+              </svg>
+            </a>
+          </li>
 
-<div class="container">
-  <img src="../leticia.jpeg" alt="Avatar" class="image" style="width:100%">
-  <div class="middle">
-    <div class="text">John Doe</div>
-    
-  </div>
-  
-</div>
-  
-</body>
+          <li>
+            <a href="projetos.html">Projetos</a>
+          </li>
+          <li><a href="/index.html">Quem sou</a></li>
+          <li><a href="/index.html">Home</a></li>
+        </ul>
+      </div>
+    </header>
+    <main>
+      <section class="leading">
+        <p class="leading-bigtext">Hello</p>
+        <p class="leading-text">
+          Ser desenvolvedora é aprender todos os dias algo novo , superar seus
+          limites descobrir que você é capaz de fazer exatamente o que quiser.
+          Uma frase que define esse processo é Become the change🦋.<br />
+          Para conhecer um pouquinho mais dos meus projetos clique nas imagens a
+          baixo ♡
+        </p>
+      </section>
+      <section class="cards">
+        <article>
+          <a
+            href="https://clone-netflix-leticia.herokuapp.com/"
+            target="_blank"
+          >
+            <img class="article-img" src="./img/cloneNet.png" alt=" " />
+          </a>
+          <h1 class="article-title">Clone Netflix</h1>
+        </article>
+        <article>
+          <a
+            href="https://leticia-rodrigues2.github.io/MotoFacil/"
+            target="_blank"
+          >
+            <img class="article-img" src="/Projetos/img/moto.png" alt=" " />
+          </a>
+          <h1 class="article-title">Moto Fácil</h1>
+        </article>
+        <article>
+          <a
+            href="https://github.com/leticia-rodrigues2/campo-Minado-Native"
+            target="_blank"
+          >
+            <img class="article-img" src="/Projetos/img/campo.jpeg" alt=" " />
+          </a>
+          <h1 class="article-title">Gamer Campo Minado</h1>
+        </article>
+        <article>
+          <a
+            href="https://leticia-rodrigues2.github.io/Gerador-CPF/"
+            target="_blank"
+          >
+            <img
+              class="article-img"
+              src="/Projetos/img/geradorCpf.png"
+              alt=" "
+            />
+          </a>
+          <h1 class="article-title">Gerador de CPF</h1>
+        </article>
+        <article>
+          <a
+            href="https://leticia-rodrigues2.github.io/Desafio/"
+            target="_blank"
+          >
+            <img class="article-img" src="/Projetos/img/marvel.png" alt=" " />
+          </a>
+          <h1 class="article-title">Filmes Marvel</h1>
+        </article>
+        <article>
+          <a
+            href="https://leticia-rodrigues2.github.io/validandoCPF/"
+            target="_blank"
+          >
+            <img class="article-img" src="/Projetos/img/cadastro.png" alt=" " />
+          </a>
+          <h1 class="article-title">Cadastro</h1>
+        </article>
+        <article>
+          <a
+            href="https://github.com/leticia-rodrigues2/App-Calculadora-Native"
+            target="_blank"
+          >
+            <img class="article-img" src="/Projetos/img/cal.jpeg" alt=" " />
+          </a>
+          <h1 class="article-title">Calculadora</h1>
+        </article>
+      </section>
+    </main>
+  </body>
 </html>
