--- a/projetos.html
+++ b/projetos.html
@@ -103,7 +103,7 @@
             href="https://leticia-rodrigues2.github.io/MotoFacil/"
             target="_blank"
           >
-            <img class="article-img" src="/Projetos/img/moto.png" alt=" " />
+            <img class="article-img" src="./img/moto.png" alt=" " />
           </a>
           <h1 class="article-title">Moto Fácil</h1>
         </article>
@@ -112,7 +112,7 @@
             href="https://github.com/leticia-rodrigues2/campo-Minado-Native"
             target="_blank"
           >
-            <img class="article-img" src="/Projetos/img/campo.jpeg" alt=" " />
+            <img class="article-img" src="./img/campo.jpeg" alt=" " />
           </a>
           <h1 class="article-title">Gamer Campo Minado</h1>
         </article>
@@ -121,11 +121,7 @@
             href="https://leticia-rodrigues2.github.io/Gerador-CPF/"
             target="_blank"
           >
-            <img
-              class="article-img"
-              src="/Projetos/img/geradorCpf.png"
-              alt=" "
-            />
+            <img class="article-img" src="./img/geradorCpf.png" alt=" " />
           </a>
           <h1 class="article-title">Gerador de CPF</h1>
         </article>
@@ -134,7 +130,7 @@
             href="https://leticia-rodrigues2.github.io/Desafio/"
             target="_blank"
           >
-            <img class="article-img" src="/Projetos/img/marvel.png" alt=" " />
+            <img class="article-img" src="./img/marvel.png" alt=" " />
           </a>
           <h1 class="article-title">Filmes Marvel</h1>
         </article>
@@ -143,7 +139,7 @@
             href="https://leticia-rodrigues2.github.io/validandoCPF/"
             target="_blank"
           >
-            <img class="article-img" src="/Projetos/img/cadastro.png" alt=" " />
+            <img class="article-img" src="./img/cadastro.png" alt=" " />
           </a>
           <h1 class="article-title">Cadastro</h1>
         </article>
@@ -152,7 +148,7 @@
             href="https://github.com/leticia-rodrigues2/App-Calculadora-Native"
             target="_blank"
           >
-            <img class="article-img" src="/Projetos/img/cal.jpeg" alt=" " />
+            <img class="article-img" src="./img/cal.jpeg" alt=" " />
           </a>
           <h1 class="article-title">Calculadora</h1>
         </article>
