--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           </li>
 
           <li>
-            <a href="/Projetos/projetos.html">Projetos</a>
+            <a href="./projetos.html">Projetos</a>
           </li>
           <li><a href="#quem-sou">Quem sou</a></li>
           <li><a href="#quem-sou">Home</a></li>
