--- a/projetos.html
+++ b/projetos.html
@@ -81,11 +81,13 @@
       <section class="leading">
         <p class="leading-bigtext">Hello</p>
         <p class="leading-text">
-          Ser desenvolvedora é aprender todos os dias algo novo , superar seus
-          limites descobrir que você é capaz de fazer exatamente o que quiser.
-          Uma frase que define esse processo é Become the change🦋.<br />
-          Para conhecer um pouquinho mais dos meus projetos clique nas imagens a
-          baixo ♡
+          <div class="typewriter">
+            <h1 id="text">Ser desenvolvedora é aprender todos os dias algo novo , superar seus
+              limites descobrir que você é capaz de fazer exatamente o que quiser.
+              Uma frase que define esse processo é Become the change🦋.<br />
+              Para conhecer um pouquinho mais dos meus projetos clique nas imagens a
+              baixo ♡</h1>
+          </div>
         </p>
       </section>
       <section class="cards">
@@ -154,5 +156,7 @@
         </article>
       </section>
     </main>
+
+    <script src="scrpitProj.js"></script>
   </body>
 </html>
