--- a/projetos.html
+++ b/projetos.html
@@ -82,8 +82,8 @@
         <p class="leading-bigtext">Hello</p>
         <p class="leading-text">
           <div class="typewriter">
-            <h1 id="text">Ser desenvolvedora é aprender todos os dias algo novo , superar seus
-              limites descobrir que você é capaz de fazer exatamente o que quiser.
+            <h1 id="text">Ser desenvolvedora é aprender todos os dias algo novo , 
+              superar seus limites descobrir que você é capaz de fazer exatamente o que quiser.
               Uma frase que define esse processo é Become the change🦋.<br />
               Para conhecer um pouquinho mais dos meus projetos clique nas imagens a
               baixo ♡</h1>
