--- a/projetos.html
+++ b/projetos.html
@@ -72,8 +72,8 @@
           <li>
             <a href="projetos.html">Projetos</a>
           </li>
-          <li><a href="/index.html">Quem sou</a></li>
-          <li><a href="/index.html">Home</a></li>
+          <li><a href="index.html">Quem sou</a></li>
+          <li><a href="index.html">Home</a></li>
         </ul>
       </div>
     </header>
