--- a/projetos.html
+++ b/projetos.html
@@ -73,7 +73,7 @@
             <a href="projetos.html">Projetos</a>
           </li>
           <li><a href="index.html">Quem sou</a></li>
-          <li><a href="index.html">Home</a></li>
+          <li><a href="git aindex.html">Home</a></li>
         </ul>
       </div>
     </header>
